# mc-schem-gen

./: .gitignore  README.md  generate_block_colormaps.py  pyproject.toml
src/mc_schem_gen/: __init__.py  block_colormap.py  data_loaders.py  volume_structure.py
src/mc_schem_gen/data/block_colormaps/: all.csv  smooth.csv
src/mcschematic_plus/: __init__.py  block_colormap.py  data_loaders.py  mcschematic_plus.py
src/mcschematic_plus/data/block_colormaps/: all.csv  smooth.csv  standard.csv
tests/: test_gen.py  test_vis.py
tests/data/: blobs.tiff  glycine.glb  letter_F.vtk  mesh_f.schem  mesh_glycine.schem  min_cell.schem
