[build-system]
requires = [
    "setuptools>=43",
]
build-backend = "setuptools.build_meta"

[project]
name = "mc-schem-gen"
version = "0.0.1"
description = "Generate Minecraft schem and nbt structures from 3D image data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Kevin Tan"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "tifffile",
    "amulet-core",
    "amulet-nbt",
    "pyvista",
]